<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/about_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/about_explanation" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/about_shortcut" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/about_limitations" />

            <TextView
                android:id="@+id/about_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/about_privacy" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/about_copyright" />

            <TextView
                android:id="@+id/about_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/about_website" />

            <Button
                android:id="@+id/about_close"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_close" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>